<resources>
    <string name="about_msg">Callcustomizer is an application which set the ringtone of an Android phone every time it receives a call.</string>
    <string name="action_settings">Settings</string>
    <string name="add_number">Add</string>
    <string name="app_name">CallCustomizer</string>
    <string name="company">xyz pvt.ltd</string>
    <string name="copyright">Copyright © 2016</string>
    <string name="email_send_btn">send </string>
    <string name="email">To</string>
    <string name="enter_email">abc@gmail.com</string>
    <string name="enter_subject">Subject</string>
    <string name="enter_message">How can i help you..</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="facebook_app_id">1613929998897187</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_login_fragment">Hello Login fragment</string>
    <string name="message">Message</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reserved">All rights reserved.</string>
    <string name="select_via_contacts">Via Contacts</string>
    <string name="subject">Subject</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="version">Version 1.0.0</string>

</resources>
