<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    tools:context="com.pawansinghchouhan05.callcustomizer.home.fragment.AddNumberFragment">

    <Button
        android:background="@drawable/round_corner_button"
        android:textAllCaps="false"
        android:id="@+id/addNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_via_contacts"
        android:textColor="#ffffff"
        />

    <EditText
        android:id="@+id/editTextName"
        android:hint="@string/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextNumber"
        android:hint="@string/enter_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:background="@drawable/round_corner_button"
        android:textAllCaps="false"
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_number"
        />

</LinearLayout>
