<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30.0dp"
        android:layout_marginBottom="30.0dp"
        android:layout_marginRight="0.5dp"
        android:layout_marginLeft="0.5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textColor="@color/colorPrimary"
        android:textSize="16.0sp"
        android:layout_marginTop="10.0sp"
        android:layout_marginBottom="10.0sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_marginLeft="10.0sp"
        android:layout_marginRight="10.0sp"
        android:hint="@string/enter_subject"
        android:inputType="text"
        android:textSize="18.0sp"/>

    <TextView
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="43dp"
        android:text="@string/email"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:textSize="18.0sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_marginLeft="10.0sp"
        android:layout_marginRight="10.0sp"
        android:text="@string/enter_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:text="@string/message"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/message"
        android:textSize="18.0sp"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignEnd="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/email"
        android:layout_below="@+id/textView3"
        android:gravity="top"
        android:layout_marginLeft="30.0sp"
        android:layout_marginRight="0.5sp"
        android:hint="@string/enter_message"
        android:inputType="textMultiLine" />


    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:drawableRight="@drawable/send"
        android:padding="5dp"
        android:text="@string/email_send_btn"
        android:textColor="#fff" />
    </RelativeLayout>
</LinearLayout>
