<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="90.0dip"
            android:layout_height="90.0dip"
            android:layout_marginTop="33.0dip"
            android:src="@drawable/abouticon"
            android:layout_centerHorizontal="true" />
        <TextView
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/black"
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_medium"
            android:text="@string/app_name"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true" />
        <TextView android:typeface="sans"
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_medium"
            android:text="@string/version"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true" />

        <View
            android:id="@+id/view"
            android:background="@color/light_grey"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginTop="30.0dip"
            android:layout_below="@+id/version"
            android:alpha="0.7" />
        <TextView
            android:textSize="@dimen/text_size_small"
            android:typeface="sans"
            android:gravity="center"
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_large"
            android:text="@string/about_msg"
            android:textColor="#b71bb7"
            android:layout_below="@id/view"
            android:alpha="0.7" />
        <View android:id="@+id/view1"
            android:background="@color/light_grey"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_marginTop="@dimen/dimen_large"
            android:layout_below="@+id/about"
            android:alpha="0.7" />
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1">
            <TextView
                android:textSize="@dimen/text_size_small"
                android:gravity="center"
                android:id="@+id/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_large"
                android:text="@string/copyright"
                android:alpha="0.7" />

            <TextView
                android:textSize="@dimen/text_size_small"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_medium"
                android:text="@string/reserved"
                android:alpha="0.7" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>